ANE-4928: suppress jline warning with Java 24